--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "symfony/string": "7.3.*",
         "symfony/translation": "7.3.*",
         "symfony/twig-bundle": "7.3.*",
+        "symfony/uid": "7.3.*",
         "symfony/ux-turbo": "^2.22",
         "symfony/validator": "7.3.*",
         "symfony/web-link": "7.3.*",
@@ -99,6 +100,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.7",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "7.3.*",
         "symfony/css-selector": "7.3.*",
