--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\EventListener\UserPasswordListener:
+        arguments:
+            $passwordHasher: '@security.password_hasher'  # Injecting the password hasher service
+        tags:
+            - { name: doctrine.event_listener, event: prePersist }
