--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,3 +27,7 @@ services:
             $passwordHasher: '@security.password_hasher'  # Injecting the password hasher service
         tags:
             - { name: doctrine.event_listener, event: prePersist }
+    App\EventListener\BannedUserListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
+
