--- a/fixtures/user.yaml
+++ b/fixtures/user.yaml
@@ -19,6 +19,17 @@ App\Entity\User:
     createdAt: <dateTimeBetween('-2 years', 'now')>
     updatedAt: <dateTimeBetween('-1 years', 'now')>
 
+
+  user_test_banned:
+    email: "testban@example.com"
+    password: "testban"
+    roles: ['ROLE_USER']
+    username: "testban"
+    name: "Testban"
+    surname: "Testban"
+    createdAt: <dateTimeBetween('-2 years', 'now')>
+    updatedAt: <dateTimeBetween('-1 years', 'now')>
+
   user_{1..5}:
     email: <email()>
     password: <password()>
